# n8n_langgraph_POC

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  workflow_current.json
data/: evaluation_dataset.json  sample_engineering_docs.json  sample_patents.json
doc/: best_practices.md  context7_references.md  requirements.md
infra/az-cli/: setup_azure.sh
infra/terraform/: .terraform.tfstate.lock.info  acr.tf  container_app.tf  identity.tf  keyvault.tf  locals.tf  main.tf  observability.tf  openai.tf  outputs.tf  poc.tfvars.example  search.tf  variables.tf
langgraph_service/: __init__.py  config.py  graph.py  server.py  state.py
langgraph_service/nodes/: azure_agent.py  databricks_agent.py  pii_filter.py  router.py  synthesizer.py
n8n/: telegram_workflow.json
reporting/: README.md
scripts/: deploy_n8n_workflow.ps1  evaluate_llm_judge.py  ingest_azure.py
tests/: conftest.py  test_integration.py  test_nodes.py  test_pii_filter.py
